code pushed date :- 15-11-2022.

--- a/app/src/main/res/layout/adduser.xml
+++ b/app/src/main/res/layout/adduser.xml
@@ -40,6 +40,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
+        android:maxLength="10"
         android:padding="10dp"
         android:inputType="number">
     </EditText>
