--- a/app/src/main/res/layout/itemview.xml
+++ b/app/src/main/res/layout/itemview.xml
@@ -34,10 +34,34 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:layout_toEndOf="@+id/username"
+                android:textSize="22sp">
+            </TextView>
+
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/userdate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="  Date : "
+                android:textColor="@color/black"
                 android:textSize="26sp"
                 android:textStyle="bold">
             </TextView>
 
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:layout_toEndOf="@+id/userdate"
+                android:textSize="22sp">
+            </TextView>
         </RelativeLayout>
 
     </LinearLayout>
