--- a/app/src/main/res/layout/dashhboardmain.xml
+++ b/app/src/main/res/layout/dashhboardmain.xml
@@ -40,7 +40,7 @@
 <!--                android:layout_marginLeft="167dp"-->
 <!--                android:padding="5dp" />-->
         </RelativeLayout>
-    <RelativeLayout
+     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -157,7 +157,7 @@
             <RelativeLayout
                 android:layout_width="110dp"
                 android:layout_height="120dp"
-                android:layout_marginLeft="140dp"
+                android:layout_marginLeft="40dp"
                 android:background="@color/white">
                 <ImageView
                     android:layout_width="81dp"
@@ -170,13 +170,36 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="80dp"
                     android:textAlignment="center"
-                    android:text="Assign Policy"
-                    android:layout_marginLeft="11dp"
+                    android:text="ASSIGN POLICY"
+                    android:layout_marginLeft="5dp"
                     android:textColor="#000099"
                     android:textStyle="bold">
                 </TextView>
             </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="110dp"
+                android:layout_height="120dp"
+                android:layout_marginLeft="235dp"
+                android:background="@color/white">
+
+                <ImageView
+                    android:layout_width="68dp"
+                    android:layout_height="67dp"
+                    android:layout_marginLeft="18dp"
+                    android:src="@drawable/payment"></ImageView>
+
+                <TextView
+                    android:id="@+id/rlpaymentstatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="80dp"
+                    android:textAlignment="center"
+                    android:text="PAYMENT STATUS"
+                    android:textColor="#000099"
+                    android:textStyle="bold">
+                </TextView>
+            </RelativeLayout>
+            </RelativeLayout>
         </RelativeLayout>
-     </RelativeLayout>
     </RelativeLayout>
 </RelativeLayout>
